--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "airtable": "^0.11.6",
+    "axios": "^1.2.6",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
