--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "airtable": "^0.11.6",
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
-    "@mui/styles": "^5.11.2"
+    "@mui/styles": "^5.11.2",
+    "airtable": "^0.11.6",
+    "next": "latest",
+    "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
