--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styles": "^5.11.2",
     "airtable": "^0.11.6",
     "next": "latest",
+    "next-auth": "^4.19.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
