--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@mui/styles": "^5.11.2",
+    "@next/font": "^13.1.6",
     "airtable": "^0.11.6",
     "next": "latest",
     "react": "^18.2.0",
