--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.4",
     "@mui/styles": "^5.11.2",
     "airtable": "^0.11.6",
+    "nanoid": "^4.0.0",
     "next": "latest",
     "next-auth": "^4.19.0",
     "react": "^18.2.0",
