--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styles": "^5.11.2",
     "@next/font": "^13.1.6",
     "airtable": "^0.11.6",
+    "clsx": "^1.2.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
