--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/material": "^5.11.4",
     "@mui/styles": "^5.11.2",
     "airtable": "^0.11.6",
+    "nanoid": "^4.0.0",
     "next": "latest",
+    "next-auth": "^4.19.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -22,7 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^17.0.1",
     "typescript": "^4.8.3"
   }
