--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@mui/styles": "^5.11.2",
+    "@next/font": "^13.1.6",
     "airtable": "^0.11.6",
+    "clsx": "^1.2.1",
     "nanoid": "^4.0.0",
     "next": "latest",
     "next-auth": "^4.19.0",
