--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/x-data-grid": "^5.17.21",
     "@next/font": "^13.1.6",
     "airtable": "^0.11.6",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^1.2.1",
     "nanoid": "^4.0.0",
     "next": "latest",
     "next-auth": "^4.19.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0"
