--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "rich-markdown-editor": "^11.21.3",
+    "styled-components": "^5.3.6",
     "tss-react": "^4.6.0"
   },
   "devDependencies": {
@@ -36,5 +38,8 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^17.0.1",
     "typescript": "^4.8.3"
+  },
+  "resolutions": {
+    "prosemirror-model": "1.9.1"
   }
 }
