--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "airtable": "^0.11.6",
     "clipboard-copy": "^4.0.1",
     "clsx": "^1.2.1",
+    "google-spreadsheet": "^3.3.0",
     "nanoid": "^4.0.0",
     "next": "latest",
     "next-auth": "^4.19.0",
@@ -34,6 +35,7 @@
     "tss-react": "^4.6.0"
   },
   "devDependencies": {
+    "@types/google-spreadsheet": "^3.3.2",
     "@types/node": "^12.12.21",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^17.0.1",
